# graduate_work_team

./: .dockerignore  .env  .gitignore  Makefile  docker-compose.yc.yaml  docker-compose.yml  example.env
.github/workflows/: main.yml  yandex-cloud.yml
alice/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
alice/src/api/: urls.py
alice/src/api/v1/: alice.py
alice/src/core/: config.py
alice/src/schemas/: alice.py  enums.py
deployments/: docker-compose.yc.yaml
docs/: alisa_integration.md  technical_specification.md
etl/: Dockerfile  docker-compose.yml  example.env
etl/src/: .dockerignore  .env  load_dump.py  main.py  requirements.txt
etl/src/core/: config.py
etl/src/elastic/: client.py  connection.py  index.py  loader.py  schema.py
etl/src/tmdb/: client.py  loader.py  movie_loader.py  tmdb_client.py  transform.py
etl/src/uploader/: bulk.py
etl/src/utils/: logger.py
nginx/: nginx.conf
nlp/: .env  .env.example  Dockerfile  README.md  patterns.json  requirements.txt  start.sh  uvicorn_logging.json
nlp/src/: main.py
nlp/src/api/: __init__.py  router.py
nlp/src/api/v1/: __init__.py  health.py  movie.py
nlp/src/core/: __init__.py  config.py  container.py  logger.py
nlp/src/schemas/: __init__.py  health.py
nlp/src/services/: __init__.py  nlp_search_service.py  nlp_service.py
nlp/src/services/search_platform/: __init__.py  elasticsearch_search_platform.py
nlp/src/services/search_service/: __init__.py  movies_search_service.py
yandex-cloud/: docker-compose.yc.yaml  user-data.yaml
