[project]
name = "alice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "orjson>=3.11.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
